--- a/app/views/artigos/index.html.haml
+++ b/app/views/artigos/index.html.haml
@@ -1,1 +1,26 @@
-%h1 Esse é o artigo#index placeholder
+%img(src="http://imageshack.com/a/img908/737/b2FIm8.png" align="center" height="100" widith="100")
+%h2(align ="center") Discipule - Cadastro de Conteúdos Online
+%br
+
+
+=link_to "Novo Artigo", new_artigo_path
+
+
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%img(src="http://imageshack.com/a/img903/3310/RYTmT8.png" align="left")
