--- a/app/views/artigos/new.html.haml
+++ b/app/views/artigos/new.html.haml
@@ -1,7 +1,21 @@
-%h1 Novo Artigo
+%img(src="http://imageshack.com/a/img908/737/b2FIm8.png" align="center" height="100" widith="100")
+
+%h1(align="center") Novo Artigo
 
 = render 'form'
 
 %br
 
 = link_to "Voltar", root_path
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%br
+%img(src="http://imageshack.com/a/img903/3310/RYTmT8.png" align="left")
+
