--- a/app/views/artigos/index.html.haml
+++ b/app/views/artigos/index.html.haml
@@ -2,6 +2,7 @@
 %h2(align ="center") Discipule - Cadastro de Conteúdos Online
 %br
 
+- if usuario_signed_in?
 	=link_to "Novo Artigo", new_artigo_path
 
 - @artigos.each do |artigo|
@@ -14,7 +15,6 @@
 	%p
 		Publicado em 
 		= artigo.created_at.strftime('%d %b de %Y')
-
 
 
 
