--- a/app/views/artigos/show.html.haml
+++ b/app/views/artigos/show.html.haml
@@ -2,3 +2,5 @@
 %p= @artigo.Conteúdo
 
 =link_to "Voltar", root_path
+= link_to "Editar", edit_artigo_path(@artigo)
+= link_to "Deletar", artigo_path(@artigo), method: :delete, data: {confirm: "Tem certeza que deseja excluir?"}
