--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,9 +13,14 @@
 	%p.alert 
 		= alert
 
+	=link_to "Todos Artigos", root_path
+
 	- Categoria.all.each do |categoria|
 		= link_to categoria.Nome, artigos_path(categoria: categoria.Nome)
 
 	=yield
+
+
+	
 
 
