--- a/app/views/artigos/edit.html.haml
+++ b/app/views/artigos/edit.html.haml
@@ -1,12 +1,12 @@
-%img(src="http://imageshack.com/a/img908/737/b2FIm8.png" align="center" height="100" widith="100")
+%img(src="http://imageshack.com/a/img908/2835/M5lwNo.png" align="center" height="100" widith="100")
 
 %h1(align="center") Editar Artigo
 
 = render 'form'
 
 %br
-
-= link_to "Voltar", root_path
+%p(align="center")
+	= link_to "Voltar", root_path
 %br
 %br
 %br
@@ -17,5 +17,5 @@
 %br
 %br
 %br
-%img(src="http://imageshack.com/a/img903/3310/RYTmT8.png" align="left")
+%img(src="http://imageshack.com/a/img905/5237/rFUJuH.png" align="left")
 
