--- a/app/views/artigos/show.html.haml
+++ b/app/views/artigos/show.html.haml
@@ -1,6 +1,19 @@
+%img(src="http://imageshack.com/a/img908/2835/M5lwNo.png" align="center" height="100" widith="100")
 %h1= @artigo.Título
 %p= @artigo.Conteúdo
 
-=link_to "Voltar", root_path
-= link_to "Editar", edit_artigo_path(@artigo)
-= link_to "Deletar", artigo_path(@artigo), method: :delete
+%blockquote
+
+	= link_to "Editar", edit_artigo_path(@artigo)
+
+	= link_to "Deletar", artigo_path(@artigo), method: :delete
+	
+%br
+%p(align="center")
+	= link_to "Voltar", root_path
+
+
+%br
+%br
+%img(src="http://imageshack.com/a/img905/5237/rFUJuH.png" align="left")
+
