Adicionando Sobre o Discipule

--- a/app/views/artigos/index.html.haml
+++ b/app/views/artigos/index.html.haml
@@ -1,5 +1,5 @@
 %img(src="http://imageshack.com/a/img908/2835/M5lwNo.png" align="center" height="100" widith="100")
-
+%body(bgcolor="#FFFFFF")
 %h2(align ="center") Discipule - Cadastro de Conteúdos Online
 
 %br
@@ -23,10 +23,14 @@
 
 
 
-
-
-
 %br
 %br
 %br
+%b
+	%blockquote
+		%p(align="left")
+			=link_to "Sobre o Discipule", "sobre"
+
+
+
 %img(src="http://imageshack.com/a/img905/5237/rFUJuH.png" align="left")
