--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,12 +14,17 @@
  *= require_self
  */
 
+@import "layout.css.scss";
+@import "projects.css.scss";
 
 
 
 
-/*
-@import "bootstrap-sprockets";
-@import "bootstrap";
-@import "bootstrap/theme"
+
+
+/*@import "bootstrap/theme"
+@import gray-darker
+@import "bootstrap"
+
+
 */
