--- a/app/views/artigos/index.html.haml
+++ b/app/views/artigos/index.html.haml
@@ -1,4 +1,7 @@
 %img(src="http://imageshack.com/a/img908/2835/M5lwNo.png" align="center" height="100" widith="100")
+/%p(class="navbar-text")
+/	Signed in as Mark Otto
+
 %body(bgcolor="#FFFFFF")
 %h2(align ="center") Discipule - Cadastro de Conteúdos Online
 
