--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,13 +7,13 @@
 	= javascript_include_tag 'application', 'data-turbolinks-track' => true
 	= csrf_meta_tags #identacao aqui teve erro, resolvido com backspace ate true da linha anterior + enter
 
-%body
+%body(id="params[:controller].parameterize %>_controller")
 	%p.notice 
 		= notice
 	%p.alert 
 		= alert
 
-	=link_to "Todos Artigos", root_path
+	=link_to "Todos Conteúdos", root_path
 
 	- Categoria.all.each do |categoria|
 		= link_to categoria.Nome, artigos_path(categoria: categoria.Nome)
@@ -22,5 +22,4 @@
 
 
 	
-
 
