--- a/app/views/artigos/show.html.haml
+++ b/app/views/artigos/show.html.haml
@@ -1,6 +1,9 @@
 %img(src="http://imageshack.com/a/img908/2835/M5lwNo.png" align="center" height="100" widith="100")
-%h1= @artigo.Título
-%p= @artigo.Conteúdo
+
+%blockquote
+
+	%h1= @artigo.Título
+	%p= @artigo.Conteúdo
 
 %blockquote
 
