--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,22 @@
-<h2>Forgot your password?</h2>
+<img src="http://imageshack.com/a/img908/2835/M5lwNo.png" align="center" height="100" widith="100">
+<h2 align="center">Esqueceu sua senha?</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+<blockquote>
+	<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+	  <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-  </div>
+	  <div class="form-inputs">
+	    <%= f.input :email, required: true, autofocus: true %>
+	  </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
+	  <div class="form-actions">
+	  	<br>
+	    <%= f.button :submit, "Me mande instruções para resetar senha" %>
+	    <br>
+	    <br>
+	  </div>
+	<% end %>
 
-<%= render "devise/shared/links" %>
+	<%= render "devise/shared/links" %>
+</blockquote>
+<img src="http://imageshack.com/a/img905/5237/rFUJuH.png" align="left">
