--- a/app/views/artigos/index.html.haml
+++ b/app/views/artigos/index.html.haml
@@ -3,41 +3,52 @@
 /	Signed in as Mark Otto
 
 %body(bgcolor="#FFFFFF")
-%h2(align ="center") Discipule - Cadastro de Conteúdos Online
+%h2(align ="center") Edifício Vila Boa
 
 %br
 
+
 - if usuario_signed_in?
+	%p(align="center")
+		Usuário:
+		= current_usuario.email
 	%b
 		%blockquote
-			%p(align="right")
+			%p(align="center")
 				=link_to('Sair', destroy_usuario_session_path, :method => :delete)
 
 		%br
 
 		%p(align="center")
-			=link_to "Clique aqui para adicionar um conteúdo", new_artigo_path
+			=link_to "Clique aqui para adicionar um tópico", new_artigo_path
 		%br
  
 - else
 	%b
 		%blockquote
-			%p(align="right")
+			%p(align="center")
 				=link_to('Entrar', new_usuario_session_path)
 			
 		%br
 
-- @artigos.each do |artigo|
-	%blockquote
-		%h2
-			= link_to artigo.Título, artigo
-	%blockquote
-		%p 
-			= truncate(artigo.Conteúdo, length: 140)
-	%blockquote
-		%p(align="right")
-			Publicado em 
-			= artigo.created_at.strftime('%d %b de %Y')
+- if usuario_signed_in?
+	- @artigos.each do |artigo|
+		%blockquote
+			%h2
+				= link_to artigo.Título, artigo
+		%blockquote
+			%p 
+				= truncate(artigo.Conteúdo, length: 140)
+		%blockquote
+			%p(align="right")
+				Publicado em 
+				= artigo.created_at.strftime('%d %b de %Y')
+				por
+				=artigo.usuario.email
+
+				
+
+
 
 
 
@@ -47,9 +58,9 @@
 %br
 %b
 	%blockquote
-		%p(align="left")
+		%p(align="center")
 			=link_to "Sobre o Discipule", "sobre"
 
 
 
-%img(src="http://imageshack.com/a/img905/5237/rFUJuH.png" align="left")
+%img(src="https://imageshack.com/i/p81OaqRyp" align="left")
