--- a/app/views/artigos/new.html.haml
+++ b/app/views/artigos/new.html.haml
@@ -1,6 +1,6 @@
 %img(src="http://imageshack.com/a/img908/2835/M5lwNo.png" align="center" height="100" widith="100")
 
-%h1(align="center") Novo Conteúdo
+%h1(align="center") Novo Tópico
 
 
 = render 'form'
