--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
 %head
 
-	%title Discipule
+	%title Edifício Vila Boa
 	= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
 	= javascript_include_tag 'application', 'data-turbolinks-track' => true
 	= csrf_meta_tags #identacao aqui teve erro, resolvido com backspace ate true da linha anterior + enter
@@ -13,7 +13,7 @@
 	%p.alert 
 		= alert
 
-	=link_to "Todos Conteúdos", root_path
+	=link_to "Todos Tópicos", root_path
 
 	- Categoria.all.each do |categoria|
 		= link_to categoria.Nome, artigos_path(categoria: categoria.Nome)
