--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,16 +13,85 @@
  *= require_tree .
  *= require_self
  */
+body{
+	font-family: 'Lora', serif;
+	background: #f6f6f6
+}
 
+.wrapper {
+	width: 60%;
+	max-width: 1140px;
+	margin: 0 auto;
+}
+
+.clearfix:before, .clearfix:after {
+	content: " ";
+	display: table;
+}
+
+.clearfix:after {
+	clear: both;
+}
+
+.main_header {
+	width: 100%;
+	margin: 0 auto;
+	background: white;
+	#logo {
+		float: left;
+		p {
+			text-transform: uppercase;
+    		font-weight: 700;
+    		letter-spacing: -1px;
+    		font-size: 1.1rem;
+		}
+	}
+	#buttons {
+		float: right;
+		
+    	letter-spacing: -1px;
+    	font-size: 1.0rem;
+    	a {
+    		line-height: 60px;
+    		background: #00008B;
+    		padding: .5em 1em;
+    		border-radius: 0.2em;
+    		color: white;
+    		text-decoration: none;
+    		font-weight: 100;
+    	}
+	}
+}
+
+#artigos{
+	background: white;
+	padding: 2em 5%;
+	border-radius: .5em;
+	.artigo {
+		margin: 1em 0;
+		padding: 1em 0;
+		border-bottom: 1px solid #D1d1d1;
+		.title {
+			margin: 0;
+			a {
+				text-decoration: none;
+				font-weight: 100;
+				font-size: 1.3rem;
+			}
+		}
+		.date {
+			margin-top: .25rem;
+			font-size: 1rem;
+			color: #505050;
+		}
+	}
+}
+
+/*
 @import "layout.css.scss";
 @import "projects.css.scss";
 
-
-
-
-
-
-/*@import "bootstrap/theme"
+@import "bootstrap/theme"
 @import gray-darker
 @import "bootstrap"
 
