--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,24 +1,37 @@
 !!!
 %html
 %head
-
+	
 	%title Edifício Vila Boa
 	= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
+	%link{ rel: "stylesheet", href: "https://fonts.googleapis.com/css?family=Lora:400,700", type: "text/css"}
+	%link{:rel => "stylesheet", :href => "https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"}/
+	-# % p<link href='https://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
+
 	= javascript_include_tag 'application', 'data-turbolinks-track' => true
 	= csrf_meta_tags #identacao aqui teve erro, resolvido com backspace ate true da linha anterior + enter
 
 %body(id="params[:controller].parameterize %>_controller")
-	%p.notice 
-		= notice
-	%p.alert 
-		= alert
+	%header.main_header.clearfix
+		.wrapper
+			#logo 
+				%p Fórum Edifício Vila Boa
+			#buttons
+				
+				= link_to "Novo Tópico", new_artigo_path
+	.wrapper
+		%p.notice 
+			= notice
+		%p.alert 
+			= alert
+	.wrapper
+		=link_to "Todos Tópicos", root_path
 
-	=link_to "Todos Tópicos", root_path
+		- Categoria.all.each do |categoria|
+			= link_to categoria.Nome, artigos_path(categoria: categoria.Nome)
 
-	- Categoria.all.each do |categoria|
-		= link_to categoria.Nome, artigos_path(categoria: categoria.Nome)
-
-	=yield
+	.wrapper
+		=yield
 
 
 	
