--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -87,6 +87,23 @@ body{
 	}
 }
 
+#artigo_conteudo {
+	background: white;
+	padding: 2em 5%;
+	border-radius: .5em;
+	h1 {
+		font-weight: 100;
+		font-size: 2em;
+		color: #00008B;
+		margin-top: 0;
+	}
+	p {
+		color: #505050;
+		font-size: 0.9rem;
+		font-weight: 100;
+		line-height: 1.5;
+	}
+}
 /*
 @import "layout.css.scss";
 @import "projects.css.scss";
