--- a/app/views/artigos/new.html.haml
+++ b/app/views/artigos/new.html.haml
@@ -1,4 +1,4 @@
-%img(src="http://imageshack.com/a/img908/2835/M5lwNo.png" align="center" height="100" widith="100")
+
 
 %h1(align="center") Novo Tópico
 
@@ -6,10 +6,12 @@
 = render 'form'
 
 %br
+
 %p(align="center")
 	= link_to "Voltar", root_path
 
-
+-#%header.main_header.clearfix
+-#	#buttons
+-#		= link_to "Voltar", root_path
 %br
 %br
-%img(src="http://imageshack.com/a/img905/5237/rFUJuH.png" align="left")
