--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<img src="http://imageshack.com/a/img908/2835/M5lwNo.png" align="center" height="100" widith="100">
+<!--<img src="http://imageshack.com/a/img908/2835/M5lwNo.png" align="center" height="100" widith="100"-->
 <h2 align="center">Esqueceu sua senha?</h2>
 
 <blockquote>
@@ -19,4 +19,3 @@
 
 	<%= render "devise/shared/links" %>
 </blockquote>
-<img src="http://imageshack.com/a/img905/5237/rFUJuH.png" align="left">
