--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,11 +39,13 @@ body{
 	background: white;
 	#logo {
 		float: left;
-		p {
+		a {
 			text-transform: uppercase;
     		font-weight: 700;
     		letter-spacing: -1px;
     		font-size: 1.1rem;
+    		text-decoration: none;
+    		color: black;
 		}
 	}
 	#buttons {
